--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="project-card" onclick="showDescription('project2')">
                     <img src="quiz.png" alt="Project 2">
-                    <h3>Quizzard</h3>
+                    <h3>Quizard</h3>
                     <p>An interactive quiz app designed to test and enhance your knowledge on various topics.</p>
                 </div>
                 <div class="project-card" onclick="showDescription('project3')">
